tests/baselines/reference/asyncGenerators.functionExpression.7.es5.errors.txt
tests/cases/conformance/asyncGenerators/es5/functionExpressions/asyncGenerators.functionExpression.7.es5.ts(1,33): error TS2523: 'yield' expressions cannot be used in a parameter initializer.


==== tests/cases/conformance/asyncGenerators/es5/functionExpressions/asyncGenerators.functionExpression.7.es5.ts (1 errors) ====
    const f = async function * (a = yield) {}
                                    ~~~~~
!!! error TS2523: 'yield' expressions cannot be used in a parameter initializer.